--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
   <h1>🍽️ NomReel</h1>
-  <p>Scroll short food videos. Discover the best eats in your city.</p>
+  <p>Scroll short food videos. Discover the best eats in your city!</p>
   <button>Coming Soon</button>
 </body>
 </html>
