--- a/index.html
+++ b/index.html
@@ -96,15 +96,14 @@
  * You can also use Instagram Reels or your own MP4s hosted on a CDN.
  */
 const DATA = [
-  {
-    city: "Denver",
-    tags: ["ramen","noodles","japanese"],
-    title: "Tonkotsu Ramen • Pork Chashu",
-    place: "Menya Ramen & Poke",
-    address: "1431 17th St, Denver",
-    // Example TikTok embed (replace with a real one you curate)
-    video: "https://www.tiktok.com/embed/7351111111111111111"
-  },
+ {
+  city: "Denver",
+  tags: ["breakfast burrito","bbq","denverfood"],
+  title: "Breakfast Burrito — SMOK Barbecue",
+  place: "SMOK Barbecue",
+  address: "Denver, CO",
+  video: "https://www.tiktok.com/embed/7328783032532569390"
+},
   {
     city: "Denver",
     tags: ["tacos","mexican","birria"],
