--- a/index.html
+++ b/index.html
@@ -104,14 +104,15 @@ const DATA = [
   address: "Denver, CO",
   video: "https://www.tiktok.com/embed/7328783032532569390"
 },
-  {
-    city: "Denver",
-    tags: ["tacos","mexican","birria"],
-    title: "Birria Tacos Dip • Cheese Pull",
-    place: "Tacos Tequila Whiskey",
-    address: "1514 York St, Denver",
-    video: "https://www.tiktok.com/embed/7352222222222222222"
-  },
+ {
+  city: "Denver",
+  tags: ["tacos","mexicanfood","foodreview","colorado","denver"],
+  title: "Family-Run Taco Spot",
+  place: "Unknown (featured by The Taco Fiend)",
+  address: "Denver, CO",
+  video: "https://www.tiktok.com/embed/7469144267508780330"
+},
+
   {
     city: "Austin",
     tags: ["bbq","brisket","texas"],
