--- a/index.html
+++ b/index.html
@@ -24,9 +24,18 @@
   .brand b{ color: var(--accent);}
   .controls{ display:flex; gap:8px; width:100%; max-width:860px; margin-left:auto;}
   select, input {
-    background:#1a1a1c; color:var(--fg); border:1px solid #2a2a2d; border-radius:10px; padding:10px 12px; outline: none;
-    font-size:14px; width:100%;
-  }
+  background:#1a1a1c;
+  color:var(--fg);
+  border:1px solid #2a2a2d;
+  border-radius:10px;
+  padding:10px 12px;
+  outline: none;
+  font-size:14px;
+  width:100%;
+  position: relative;
+  z-index: 20; /* ensures dropdown appears above search button */
+}
+
   .btn {
     background: var(--accent); border:0; color:#fff; padding:10px 14px; border-radius:10px; font-weight:600; cursor:pointer;
   }
