--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
   @media (max-width: 640px){
     .controls {flex-direction:column;}
   }
+  /* TEMP FIX: push city dropdown below header */
+.city-dropdown, #city-select {
+  position: relative;
+  top: 20px;
+  z-index: 10;
+}
 </style>
 </head>
 <body>
