--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
   /* TEMP FIX: push city dropdown below header */
 .city-dropdown, #city-select {
   position: relative;
-  top: 20px;
+  display: block;
+  margin-top: 60px;  /* adjust if still hidden */
   z-index: 10;
 }
+
 </style>
 </head>
 <body>
