--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     position: fixed; inset: 0 0 auto 0; height: 64px; display:flex; gap:12px; align-items:center; padding:0 12px;
     background: rgba(15,15,16,0.82); backdrop-filter: blur(8px); border-bottom: 1px solid #1d1d1f; z-index:10;
   }
+  /* space below fixed header */
+   body { padding-top: 70px; }
   .brand { font-weight: 700; letter-spacing: 0.3px; }
   .brand b{ color: var(--accent);}
   .controls{ display:flex; gap:8px; width:100%; max-width:860px; margin-left:auto;}
