--- a/index.html
+++ b/index.html
@@ -76,12 +76,14 @@
     .controls {flex-direction:column;}
   }
   /* TEMP FIX: push city dropdown below header */
-.city-dropdown, #city-select {
+/* TEMP FIX: push city dropdown below header */
+#city {
   position: relative;
   display: block;
-  margin-top: 60px;  /* adjust if still hidden */
+  margin-top: 60px;   /* bump higher if still tucked */
   z-index: 10;
 }
+
 
 </style>
 </head>
