--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   }
   /* Fixed top bar */
   .topbar {
-    position: fixed; inset: 0 0 auto 0; height: 64px; display:flex; gap:12px; align-items:center; padding:0 12px;
+    position: static; inset: 0 0 auto 0; height: 64px; display:flex; gap:12px; align-items:center; padding:0 12px;
     background: rgba(15,15,16,0.82); backdrop-filter: blur(8px); border-bottom: 1px solid #1d1d1f; z-index:10;
   }
   /* space below fixed header */
