--- a/index.html
+++ b/index.html
@@ -78,11 +78,10 @@
   /* TEMP FIX: push city dropdown below header */
 /* TEMP FIX: push city dropdown below header */
 #city {
-  position: relative;
   display: block;
-  margin-top: 60px;   /* bump higher if still tucked */
-  z-index: 10;
+  width: 100%;
 }
+
 
 
 </style>
