--- a/index.html
+++ b/index.html
@@ -16,27 +16,69 @@
     margin:0; height:100%; background:var(--bg); color:var(--fg); font-family: Inter, system-ui, -apple-system, Arial, sans-serif;
   }
   /* Fixed top bar */
-  .topbar {
-    position: static; inset: 0 0 auto 0; height: 64px; display:flex; gap:12px; align-items:center; padding:0 12px;
-    background: rgba(15,15,16,0.82); backdrop-filter: blur(8px); border-bottom: 1px solid #1d1d1f; z-index:10;
-  }
-  /* space below fixed header */
-   body { padding-top: 70px; }
-  .brand { font-weight: 700; letter-spacing: 0.3px; }
-  .brand b{ color: var(--accent);}
-  .controls{ display:flex; gap:8px; width:100%; max-width:860px; margin-left:auto;}
-  select, input {
-  background:#1a1a1c;
-  color:var(--fg);
-  border:1px solid #2a2a2d;
-  border-radius:10px;
-  padding:10px 12px;
-  outline: none;
-  font-size:14px;
-  width:100%;
-  position: relative;
-  z-index: 20; /* ensures dropdown appears above search button */
+/* Fixed top bar */
+.topbar {
+  position: static;
+  height: auto;
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  padding: 12px;
+  background: rgba(15,15,16,0.82);
+  backdrop-filter: blur(8px);
+  border-bottom: 1px solid #1d1d1f;
+  z-index: 10;
 }
+
+/* space below fixed header */
+body {
+  padding-top: 0;
+}
+
+.brand {
+  font-weight: 700;
+  letter-spacing: 0.3px;
+}
+.brand b {
+  color: var(--accent);
+}
+
+.controls {
+  display: flex;
+  gap: 8px;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 860px;
+  margin: 0 auto 16px auto;
+  z-index: 1;
+}
+
+select,
+input {
+  background: #1a1a1c;
+  color: var(--fg);
+  border: 1px solid #2a2a2d;
+  border-radius: 10px;
+  padding: 10px 12px;
+  outline: none;
+  font-size: 14px;
+  width: 100%;
+}
+
+/* Responsive stack on mobile */
+@media (max-width: 640px) {
+  .controls {
+    flex-direction: column;
+  }
+}
+
+/* Feed padding to avoid UI overlap */
+#feed {
+  padding-top: 16px;
+  position: relative;
+  z-index: 0;
+}
+
 
   .btn {
     background: var(--accent); border:0; color:#fff; padding:10px 14px; border-radius:10px; font-weight:600; cursor:pointer;
