--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   /* Fixed top bar */
 /* Fixed top bar */
 .topbar {
-  position: static;
+  position: fixed;
   height: auto;
   display: flex;
   gap: 12px;
