--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   /* Fixed top bar */
 /* Fixed top bar */
 .topbar {
-  position: fixed;
+  position: static;
   height: auto;
   display: flex;
   gap: 12px;
