--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>NomReel — Local food reels</title>
+  <link rel="icon" href="/assets/favicon.png" />
+  <link rel="stylesheet" href="/src/styles.css" />
+  <!-- TikTok embed loader -->
+  <script async src="https://www.tiktok.com/embed.js"></script>
+</head>
+<body>
+  <header class="site-header">
+    <div class="brand">
+      <img src="/assets/logo.svg" alt="NomReel" class="logo"/>
+      <span class="wordmark">Nom<span class="accent">Reel</span></span>
+    </div>
+    <p class="tagline">Discover your next meal through real food reels. Local videos, local flavor.</p>
+  </header>
+
+  <section class="searchbar">
+    <div class="controls">
+      <select id="citySelect" aria-label="City">
+        <option>Billings</option>
+        <option>Bozeman</option>
+        <option>Denver</option>
+      </select>
+      <input id="queryInput" type="search" placeholder="Search food (e.g., ramen, tacos, brunch)" />
+      <button id="searchBtn">Search</button>
+    </div>
+  </section>
+
+  <main class="feed" id="feed">
+    <h2 class="feed-title">Billings Feed</h2>
+    <!-- Cards render here -->
+  </main>
+
+  <footer class="site-footer">
+    <p>© <span id="year"></span> NomReel • Curated TikTok embeds. Creators credited.</p>
+  </footer>
+
+  <script type="module" src="/src/app.js"></script>
+</body>
+</html>
 
