--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
   </section>
 
-  <main class="feed" id="feed">
+  <main id="feed" class="feed snap-container">
     <h2 class="feed-title">Billings Feed</h2>
     <!-- Cards render here -->
   </main>
