--- a/index.html
+++ b/index.html
@@ -4,42 +4,45 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>NomReel — Local food reels</title>
-  <link rel="icon" href="/assets/favicon.png" />
-  <link rel="stylesheet" href="/src/styles.css" />
+  <link rel="icon" href="./assets/favicon.png" />
+  <link rel="stylesheet" href="./src/styles.css" />
   <!-- TikTok embed loader -->
   <script async src="https://www.tiktok.com/embed.js"></script>
 </head>
 <body>
   <header class="site-header">
     <div class="brand">
-      <img src="/assets/logo.svg" alt="NomReel" class="logo"/>
+      <img src="./assets/logo.svg" alt="NomReel" class="logo"/>
       <span class="wordmark">Nom<span class="accent">Reel</span></span>
     </div>
     <p class="tagline">Discover your next meal through real food reels. Local videos, local flavor.</p>
   </header>
+
+  <!-- Small fixed city badge (optional) -->
+  <div id="cityBadge" class="city-badge">Billings • NomReel</div>
 
   <section class="searchbar">
     <div class="controls">
       <select id="citySelect" aria-label="City">
         <option>Billings</option>
         <option>Bozeman</option>
-        <option>Denver</option>
+        <option selected>Denver</option>
       </select>
       <input id="queryInput" type="search" placeholder="Search food (e.g., ramen, tacos, brunch)" />
       <button id="searchBtn">Search</button>
     </div>
   </section>
 
+  <!-- FULL-SCREEN SNAP SCROLLER -->
   <main id="feed" class="feed snap-container">
-    <h2 class="feed-title">Billings Feed</h2>
-    <!-- Cards render here -->
+    <!-- Slides injected by app.js -->
   </main>
 
   <footer class="site-footer">
     <p>© <span id="year"></span> NomReel • Curated TikTok embeds. Creators credited.</p>
   </footer>
 
-  <script type="module" src="/src/app.js"></script>
+  <script type="module" src="./src/app.js"></script>
 </body>
 </html>
 
