--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </main>
 
   <footer class="site-footer">
-    <p>© <span id="year"></span> NomReel • TikTok embeds credited to original creators.</p>
+    <p>© <span id="year"></span> NomReel • TikTok embeds credited to original creator.</p>
   </footer>
 
   <script type="module" src="./src/app.js"></script>
