--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     </select>
     <input id="queryInput" type="search" placeholder="Search food (e.g., tacos, ramen)" />
     <button id="searchBtn">Search</button>
+    <button id="mapToggle" type="button">Map</button>
+
+    
   </section>
 
   <!-- FULL-SCREEN SNAP SCROLLER -->
